# handler/endpoints.go
@@ -1,7 +1,9 @@
 package handler
 
 import (
+	"errors"
 	"net/http"
+	"strings"
 
 	"github.com/SawitProRecruitment/UserService/generated"
 	"github.com/labstack/echo/v4"
@@ -74,4 +76,50 @@ func (s *Server) Login(c echo.Context) error {
 		Id:    user.ID,
 		Token: token,
 	})
+}
+
+func (s *Server) Profile(c echo.Context, id int64) error {
+	authToken, err := getToken(c)
+	if err != nil {
+		return c.JSON(http.StatusForbidden, generated.ErrorResponse{
+			Kind:    "Forbidden",
+			Message: err.Error(),
+		})
+	}
+
+	err = s.AuthService.ValidateJWT(authToken)
+	if err != nil {
+		return c.JSON(http.StatusForbidden, generated.ErrorResponse{
+			Kind:    "Forbidden",
+			Message: err.Error(),
+		})
+	}
+
+	user, err := s.UserService.FindUserByID(c.Request().Context(), id)
+	if err != nil {
+		return c.JSON(http.StatusInternalServerError, generated.ErrorResponse{
+			Kind:    "InternalServerError",
+			Message: err.Error(),
+		})
+	}
+	if user == nil {
+		return c.JSON(http.StatusBadRequest, generated.ErrorResponse{
+			Kind:    "BadRequest",
+			Message: err.Error(),
+		})
+	}
+
+	return c.JSON(http.StatusOK, generated.ProfileResponse{
+		FullName: user.FullName,
+		Phone:    user.Phone,
+	})
+}
+
+func getToken(c echo.Context) (string, error) {
+	authHeader := c.Request().Header.Get("Authorization")
+	if !strings.Contains(authHeader, "Bearer") {
+		return "", errors.New("invalid token")
+	}
+
+	return strings.Replace(authHeader, "Bearer ", "", -1), nil
 }
